<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.android_studio.checkvinbygibdd.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.Toolbar>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/vinTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/field_description"
            android:text="@string/vin" />

        <EditText
            android:id="@+id/vinET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="11111111111111111111"
            android:textSize="@dimen/field_description"
            android:maxLength="20" />

        <ImageView
            android:id="@+id/captchaIV"
            android:layout_width="300dp"
            android:layout_height="100dp" />

        <TextView
            android:id="@+id/captchaTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/field_description"
            android:text="@string/captcha" />

        <EditText
            android:id="@+id/captchaEV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="@dimen/field_description"
            android:maxLength="5" />

        <Button
            android:id="@+id/checkBtn"
            android:text="@string/check"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:background="@drawable/button_shape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />
    </LinearLayout>
</LinearLayout>
